<resources>
    <string name="app_name">Music Library</string>
    <string name="album_string">Album</string>
    <string name="artist_album">Artist</string>
    <string name="playlist_string">Playlist</string>
    <string name="genre_string">Genre</string>
    <string name="playlist_description">Playlist Image</string>
    <string name="album_image">Album Image</string>
    <string name="artist_image">Artist Image</string>
    <string name="image_of_genre">Image of Genre</string>
    <string name="title_activity_music">Music Activity</string>
    <string name="image_representing_album_or_artist">Image representing Album or Artist</string>
    <string name="image_representing_song">Image representing Song</string>
    <string name="title_activity_song">Songs</string>
    <string name="title_activity_now_playing">Now Playing</string>
    <string name="skip_next_description">Skip Next Icon Image</string>
    <string name="skip_previous_play">Play Icon Image</string>
    <string name="replay_icon_description">Replay Icon Image</string>
    <string name="pause_icon_description">Pause Icon Image</string>
    <string name="song_image">Song Image</string>
    <string name="skip_previous_description">Skip Previous Icon Description.</string>
    <string name="music_library">Music Library</string>
</resources>
